# ghostcrew

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.kali  MCP-CLEANUP-NOTE.md  PR_BODY.md  PR_BODY.txt  README.md  README_zh.md  docker-compose.yml  docker-entrypoint.sh  mcp_servers.json.example  pyproject.toml  requirements-hexstrike.txt  requirements.txt
.github/workflows/: docker.yml
ghostcrew/: __init__.py  __main__.py
ghostcrew/agents/: __init__.py  base_agent.py  state.py
ghostcrew/agents/crew/: models.py  orchestrator.py  tools.py  worker_pool.py
ghostcrew/agents/ghostcrew_agent/: __init__.py  ghostcrew_agent.py  system_prompt.jinja
ghostcrew/agents/prompts/: ghost_agent.jinja  ghost_crew.jinja
ghostcrew/config/: __init__.py  constants.py  settings.py
ghostcrew/interface/: __init__.py  cli.py  main.py  tui.py  utils.py
ghostcrew/interface/assets/: tui_styles.tcss
ghostcrew/knowledge/: __init__.py  embeddings.py  graph.py  indexer.py  rag.py
ghostcrew/llm/: __init__.py  config.py  llm.py  memory.py  utils.py
ghostcrew/mcp/: __init__.py  discovery.py  manager.py  tools.py  transport.py
ghostcrew/playbooks/: thp3_network.py  thp3_recon.py  thp3_web.py
ghostcrew/runtime/: __init__.py  docker_runtime.py  runtime.py
ghostcrew/tools/: __init__.py  executor.py  loader.py  registry.py
ghostcrew/tools/browser/: __init__.py
ghostcrew/tools/completion/: __init__.py
ghostcrew/tools/notes/: __init__.py
ghostcrew/tools/terminal/: __init__.py
ghostcrew/tools/web_search/: __init__.py
pentestagent/agents/: base_agent.py
pentestagent/agents/crew/: orchestrator.py  worker_pool.py
pentestagent/agents/pa_agent/: pa_agent.py
pentestagent/agents/prompts/: pa_agent.jinja  pa_crew.jinja
pentestagent/interface/: cli.py  main.py  notifier.py  tui.py
pentestagent/knowledge/: graph.py  indexer.py  rag.py
pentestagent/llm/: llm.py
pentestagent/mcp/: example_adapter.py  hexstrike_adapter.py  manager.py  mcp_servers.json  metasploit_adapter.py  stdio_adapter.py  transport.py
pentestagent/runtime/: docker_runtime.py  runtime.py
pentestagent/tools/: token_tracker.py
pentestagent/tools/notes/: __init__.py
pentestagent/tools/terminal/: __init__.py
pentestagent/workspaces/: __init__.py  manager.py  utils.py  validation.py
scripts/: add_hexstrike_subtree.sh  add_metasploit_subtree.sh  install_hexstrike_deps.ps1  install_hexstrike_deps.sh  install_metasploit_deps.sh  run.sh  setup.ps1  setup.sh
tests/: __init__.py  conftest.py  test_agents.py  test_graph.py  test_import_workspace.py  test_knowledge.py  test_mcp_scaffold.py  test_notes.py  test_notifications.py  test_rag_workspace_integration.py  test_target_scope.py  test_target_scope_edges.py  test_tools.py  test_tui_notifications.py  test_validation.py  test_workspace.py  test_workspace_utils.py
workspaces/Test1/: meta.yaml
workspaces/Test2/: meta.yaml
